# bidi

./: README.md  bidi.cabal  flake.nix
app/: Bidi.hs  HigherBidi.hs  Main.hs
