cabal-version:      3.0
name:               bidi
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Tony Zorman
maintainer:         soliditsallgood@mailbox.org
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable bidi
    import:           warnings
    main-is:          Main.hs
    other-modules:    Bidi
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , containers
    hs-source-dirs:   app
    default-language: GHC2021
